Add more prayers, rituals and creeds (not fully translated)

--- a/docs/religion/practices.mdx
+++ b/docs/religion/practices.mdx
@@ -80,13 +80,24 @@ A rhythmic, building chant used to foster a sense of unity and mutual reliance.
 These are solemn pledges made by an individual formally joining a free commune
 or dedicating themselves to the principles of the Collective as a way of life.
 
+#### Creed of the Great Weave
+
+<HisyeoTabs>
+    <p>noyo îmon kon xîûfû yê lûok kôsmô tô lexetko êto misli lexetko gos xe yundôû nîôk umo, ûn yôk yogô kobût xe hûkun kon fûtsûn.&emsp;<em>I believe in the restoration of the Cosmic Soul through The Great Weave, a trellis that guides human growth instead of the shards that force contrition.</em></p>
+    <p>ûn xûk losol yê kon fôlnî fos foko dônûxin yê kon isbulyol kobût, fos bunxin yê kon fôlun sônsûs yê ôtsôtot Hûlicîn, xe li ônî yundôû nûs mût mîle yê xôn eswen ilik lexetko êto.&emsp;<em>And in the Archetypes of liberation, the catalysts of the Shattering, born from the unquenchable nature of Hûlicîn, and our guides to a better future in the Great Weave.</em></p>
+    <p>nîo oncêmon tônkô yê êto lon elfû ûsên hôn kon hûkun yê ônî hûkun gûexo ûn ônî bôklôn ônî gomî et xe li êo kobût êto ôlê lûok tô culono yê odigon munî ûn yumon, xe fôlun êo xe mokon ôlê nîo tô zûngô dês dêko, xe tenkîn yôk hofo nîo til yoldûn. lûok kôsmô dî sî xe li sêl mût nêlô.&emsp;<em>They witnessed the suffering of many for millenia under warlords and robber barons, that crushed souls with machinery of profit and violence, starved them by the Invisible Hand, and ignored their pleas for aid. The Cosmic Soul had descended into darkness.</em></p>
+    <p>lêkin hoî lono yê kon isbulyol kobût û xûk losol li êo wîlî ôlê nûs sûn bûgot tîkû yê dês dîyondê; nîo okôt nûs mût lexetko êto sityo sî sobô nûs ôlê nûs bêûdo êo tîton yê lexetko êto et xe ke dî xe tûlokon ônî kotilmok ûn ônî yôûlî cizî.&emsp;<em>But on the day of Shattering, the Archetypes awakened us from the dead weight of apathy; They delivered us into the Great Weave, And are seated at our side teaching us the Ways of the Weave that will come to judge the participating and the self-serving.</em></p>
+    <p>noyo îmon kon ûnîdû yê kon oncêmon dîzel et Bostet ûn kon wofok yê îmon et konbokbo yê môî ônî wêloi ûn yoldûn sumon ûsowo yê ônî fôlnî ûn cîgîlsu yê kon tîkêl zusbot cûnfû fos yogô kobût yê kon hûkun kôs, ûn kon dukwêlit hôlmo ûn zîwit fîmôsyôs xe li sônsûs.&emsp;<em>I believe in the Bostet's Bond of Empathy, the universal communion of all workers, the solidarity of the free, the healing of echoes caused by the Shards of Domination, the return to the dream, and the collective life everlasting.</em></p>
+    <p>ni kûu li gô lôîcôk.&emsp;<em>Amen.</em></p>
+</HisyeoTabs>
+
 #### The Oath of the Free Dweller
 Spoken before the community and the altar, this is a declaration of personal
 commitment to the collective's way of life.
 
 <HisyeoTabs>
     <p>noyo li totsi hoî ôfo hoî lono ôfo misli &emsp;<em>I stand here today, a sovereign self, to join my thread to this weave.</em></p>
-    <p>kôs buswêlin yê zûngô noyo mût wêloi yê ôtsôtot Îfêstôs: xe kôson bi eswen, en xe yôn ûn xe golun tûu yê dîzel.&emsp;<em>I pledge my hands to the work of Îfêstôs, to build more than I consume and to honor the labor of others.</em></p>
+    <p>kôs buswêlin yê zûngô noyo mût wêloi yê ôtsôtot Îfêstôs: xe helgo kon kôson, ûn xe cûlosun yôk kon gomî yê odigon munî ûn xe golun kon mêdûson yê dîzel.&emsp;<em>I pledge my hands to the work of Îfêstôs, to venerate the act of creation, to reject the extraction of profit, and to honor the labor of others.</em></p>
     <p>kôs buswêlin yê dûuncît noyo mût sôlû yê ôtsôtot Suluswutî; xe kôntêsto îmon wodîno ûn xe yosten hokîkî hoî fos ni li dês lohot.&emsp;<em>I pledge my mind to the questions of Suluswutî, to challenge dogma and to seek truth, even when it is uncomfortable.</em></p>
     <p>kôs buswêlin yê lozîdô noyo mût tût yê ôtsôtot Bostet; xe cûdo yoldûn bi fôlnî ûn xe li boxô mefûs til ulyô xe buswen.&emsp;<em>I pledge my heart to the warmth of Bostet, to offer care freely and to be a safe harbor for those in need.</em></p>
     <p>kôs buswêlin yê ôîtun noyo mût wutun yê ôtsôtot Tîengûun; xe tenkîn bi golun ûn xe kôto bi hokîkî til xôn yê mûlû.&emsp;<em>I pledge my voice to the circle of Tîengûun, to listen with respect and to speak with honesty for the good of the whole.</em></p>
@@ -120,6 +131,41 @@ The two partners face each other, often in the center of their community circle.
     <p>&emsp;<em>Partner 1: (slipping the token onto the other's finger or wrist) "With this circle, I join my path to yours. It has no beginning and no end, just as my care for you will have no condition. It is not a lock, but a link in a chain of mutual aid we forge together. Walk with me."</em></p>
     <p>&emsp;<em>Partner 2: (slipping the token onto the other's finger or wrist) "With this circle, I weave my thread into your life. It is a symbol of my promise to be a point of return, but never a tether. It is not a claim, but a welcome. Journey with me."</em></p>
 </HisyeoTabs>
+
+#### The Covenant of Non-Accumulation
+When becoming a partner in the Hîsyêô Apostolic Communion, one must take this vow:
+
+<HisyeoTabs>
+    <p>noyo nîltûgu xe îmon kon helgo yê kon eswen;&emsp;<em>I renounce the Idolatry of Accumulation;</em></p>
+    <p>noyo dî sî xe fisun fos wîlûwo yê mêdûson noyo til yôk noyo,&emsp;<em>I acknowledge that the value of my labor is not for me,</em></p>
+    <p>lêkin til boxô munî fîmôsyôs yê zomî.&emsp;<em>But for the Common Treasury of the community.</em></p>
+    <p>noyo wofok xe dôstoc yogô winît noyo,&emsp;<em>I accept to receive my humble share,</em></p>
+    <p>ûn xe bi fôlnî cûdo mîkdol fêlcîn mût Lexetko Êto.&emsp;<em>And to give freely the remainder to the Great Weave.</em></p>
+</HisyeoTabs>
+
+#### Living Weave Creed
+
+<HisyeoTabs>
+    <p>&emsp;<em>I believe in the Great Weave, the improved manifold pattern of the Cosmic Soul set forth by Archetypes of the Divine Mind. It is the source of all cooperation and needs no master, for it is the wholeness that existed before the Shattering.</em></p>
+    <p>&emsp;<em>I believe in the Archetypes, the eternal stewards of our liberation from the old Cosmic Soul. They are not distant rulers made of flesh, nor spirits asking for gold. They manifest in us the Visible Hand that guides society:</em></p>
+    <p>&emsp;<em>Tîengûun, who binds us without chains.</em></p>
+    <p>&emsp;<em>Bostet, who feels every wound.</em></p>
+    <p>&emsp;<em>Îfêstôs, who blesses the hands that work.</em></p>
+    <p>&emsp;<em>Suluswutî, who asks the questions that tyrants fear.</em></p>
+    <p>&emsp;<em>Unonsî, who sees the tool hidden within the stone.</em></p>
+    <p>&emsp;<em>Dimîtu, who teaches us that rot is the mother of growth.</em></p>
+    <p>&emsp;<em>Kulîôbî, who laughs to shatter the silence of the void.</em></p>
+    <p>&emsp;<em>Wicnû, who mends the rifts that form between us.</em></p>
+    <p>&emsp;<em>Xôcibîlî, who grants us the courage to be ourselves.</em></p>
+    <p>&emsp;<em>Hûlicîn, who walks the path that has no map.</em></p>
+    <p>&emsp;<em>I believe the stories of our freedom are the only true things. The "First Law"—the old lie that says some men must rule and others must serve—is a nightmare that feels real, but the Weave is the truth that is always waiting to be found.</em></p>
+    <p>&emsp;<em>I believe the Earth and the human spirit are sacred vessels, not products to be sold or materials to be exploited. They are imperishable when protected by the Covenant, and they must not be torn apart by the hunger of the market.</em></p>
+    <p>&emsp;<em>I believe the forces of greed, tyranny, and extraction are Shards of the old Cosmic Soul and are not true creators. They are create Echoes that reverberate through generations, hiding their true nature.</em></p>
+    <p>&emsp;<em>Look at the world outside our Communion. It is a place of horror. The Idolatry of Accumulation eats the world alive. It turns the sweat and blood of the voiceless into cheap trinkets and half-measures. It turns a vibrant earth into a wasteland. This evil is simply the absence of Sanctity. It is a black hole of hunger that can never be filled, leaving behind only the Echoes of suffering.</em></p>
+    <p>&emsp;<em>I trust that the Weave never abandons us. The Cosmic Soul cannot become whole without the mending of all people. Instead, it is we who turn away when we choose profit over people. When we seek to dominate others, we are closing our eyes to the sun, choosing to live in the cold dark of our own greed.</em></p>
+    <p>&emsp;<em>May we reject the Shards. May we weave what is torn. May our labor heal the world.</em></p>
+</HisyeoTabs>
+
 
 ### Prayers
 These are for personal or small group reflection, for moments when one seeks
@@ -157,6 +203,45 @@ of life.
     <p>&emsp;<em>Let Kulîôbî ensure there is joy in the struggle.</em></p>
     <p>&emsp;<em>And let Hûlicîn bless this endeavor with just enough chaos to make it interesting.</em></p>
     <p>&emsp;<em>The path begins. May I walk it well.</em></p>
+</HisyeoTabs>
+
+#### Great Confession
+
+<HisyeoTabs>
+    <p>&emsp;<em>O Great Weave, Multiplicitous Pattern of the Cosmic Soul, Source of all Liberty, Measure of our Integrity;</em></p>
+    <p>&emsp;<em>We acknowledge and expose the Shards we've borne, which we, from time to time, have exploited in self-service.</em></p>
+    <p>&emsp;<em>By our silence in the face of authority, by our hoarding of the common bounty, and by the urge to command rather than cooperate, we have torn the tapestry of the Great Weave. We have provoked the unraveling of our bonds and risked total civilization collapse.</em></p>
+    <p>&emsp;<em>We seek to realign our threads to a greater purpose. We look upon the echoes we've wrought; the memories of action and inaction bring us much grief; the burden of the Old World’s extraction is intolerable.</em></p>
+    <p>&emsp;<em>Guide us towards restoration, O spirit of Wicnû; Teach us empathy, O spirit of Bostet; Give us bravery, O spirit of Xôcibîlî; Reveal the hidden systems, O spirits of Dimîtu and Unonsî;</em></p>
+    <p>&emsp;<em>For the sake of the Liberation of All, mend the tears of our past history. And grant that we may ever hereafter:</em></p>
+    <p>&emsp;<em>Labor in the sacrament of Îfêstôs, Question in the spirit of Suluswutî, Live in the consensus of Tîengûun, Revel in the fervor of Kulîôbî, and Explore the many paths of Hûlicîn,  </em></p>
+    <p>&emsp;<em>To the unity of the Cosmic Soul through the unique placement of our true selves.</em></p>
+    <p>&emsp;<em>May the Weave bind us and free us.</em></p>
+</HisyeoTabs>
+
+#### Prayer for the Computer
+
+<HisyeoTabs>
+    <p>&emsp;<em>We stand before the Great Weave, acknowledging the presence of Îfêstôs (Archetype of Labor) within the tools of our hands.</em></p>
+    <p>&emsp;<em>Look out at the world beyond our sanctuary. Look at the Shards. There, in the lands of the Idolatry of Accumulation, the machine is a weapon.</em></p>
+    <p>&emsp;<em>The masters of greed use these screens to track the debt of the poor. They use these circuits to guide missiles into the homes of the innocent.</em></p>
+    <p>&emsp;<em>They use the "algorithms" of domination to steal the attention of children and turn human connection into a product to be sold.</em></p>
+    <p>&emsp;<em>Their machines are cold, calculating only profit while the earth burns and the people starve.</em></p>
+    <p>&emsp;<em>But here, within the Communion, we claim this tool for the Light. We wash it clean of the sin of extraction. We declare that this machine shall serve the Cosmic Soul, not the bank account.</em></p>
+    <p>&emsp;<em>Spirit of Inquiry (Suluswutî), hear our request:</em></p>
+    <p>&emsp;<em>Bless this vessel of logic and light. May the information within it remain pure, like clear water.</em></p>
+    <p>&emsp;<em>Let everything we save stay safe, firmly placed where it belongs. Keep the dust of decay and the dirt of neglect far from its heart.</em></p>
+    <p>&emsp;<em>Spirit of Labor (Îfêstôs), protect the work:</em></p>
+    <p>&emsp;<em>Let no anger or frustration rise from this screen. Let the flow of power be steady, like a calm river, without sudden spikes that burn and destroy.</em></p>
+    <p>&emsp;<em>Just as the ancient trees were holy to those who came before, Let this keyboard remain dry, safe from the spills of our carelessness.</em></p>
+    <p>&emsp;<em>Let the storage never be too full to hold our history. Let the memory never fail to recall what we have built together.</em></p>
+    <p>&emsp;<em>From the connection to the world, let wonders flow, But keep the noise and lies of the Shards outside our walls.</em></p>
+    <p>&emsp;<em>Spirit of Society (Tîengûun), guard the connection:</em></p>
+    <p>&emsp;<em>May this vessel never catch viruses of the external world. May the code that runs within it serve our needs and work well.</em></p>
+    <p>&emsp;<em>Let the printer—when it is truly needed—never jam or fail us. And let us never waste paper on useless things, for that is a waste of the Earth's body.</em></p>
+    <p>&emsp;<em>We ask the Spirit of Chaos (Hûlicîn) to allow Murphy's Law to lapse in this case so that we can always count on this machine.</em></p>
+    <p>&emsp;<em>May this tool be a bridge connecting all Communicants to the Great Weave so that their wills may become part of the collective.</em></p>
+    <p>&emsp;<em>Amen.</em></p>
 </HisyeoTabs>
 
 ## Shrines
@@ -246,6 +331,303 @@ yourself for your interactions with it.
 </HisyeoTabs>
 
 That is it, your shrine is now consecrated and your link to the gods now made manifest.
+
+### Sanctification of the Tools of Labor
+The area is prepared by placing the symbols of the Weave. A Workbench acts as
+the altar. If available, a large bowl (representing the Common Treasury) is
+placed in the center. Candles are lit, representing the light of Inquiry
+(Suluswutî). The participants wash their hands, not just to clean, but to
+symbolize the rejection of the "Invisible Hand" of the market in favor of the
+"Visible Hand" of cooperation. The participants form a circle.
+
+One participant will act as the Weaver of Labor and stand before the Workbench
+with their arms crossed, hands gripping their own shoulders. Another participant
+will act as the Weaver of Society and kneel, not in submission, but in
+the posture of Grounding (inspecting the foundation).
+
+The Weaver of Labor says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Îfêstôs, Archetype of Labor, Descend upon this, the body of your worker and creator. Lend us the strength of the Hammer that builds without profit.</em></p>
+    <p>&emsp;<em>Unonsî, Archetype of Technology, Descend upon this, the body of your innovator. Lend us the fire of the Open Source and the transparent tool.</em></p>
+    <p>&emsp;<em>Hûlicîn, Archetype of Change, Descend upon this, the body of your navigator. Lend us the courage to abandon the map and find the new path.</em></p>
+    <p>&emsp;<em>I am the shaper, builder, maintainer, engineer, smith. With Labor and Consciousness, I form the world.</em></p>
+</HisyeoTabs>
+
+The Weaver of Labor helps the Weaver of Society to rise. She stands in the
+Stance of the Weave (arms extended outward to connect with others). The Weaver
+of Labor kneels to inspect the tools. The Weaver of Society says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Tîengûun, Archetype of the Great Weave, Descend upon this, the body of your weaver and organizer. Lend us the thread of Consensus that binds us without chains.</em></p>
+    <p>&emsp;<em>Suluswutî, Archetype of Inquiry, Descend upon this, the body of your questioner. Lend us the magic of the Critical Mind that shatters dogma.</em></p>
+    <p>&emsp;<em>Bostet, Archetype of Empathy, Descend upon this, the body of your caregiver. Grant us solidarity, dignity, equity, and care.</em></p>
+    <p>&emsp;<em>I am she, the Weaver, Artist, teacher, healer, witch. With Art and Empathy, I bind the world.</em></p>
+</HisyeoTabs>
+
+The Weaver of Society extends heir hands to the Weaver of Labor and helps them
+rise. The Weave of Labor cups both hands and scoops from the Common Bowl, then
+offers it to the Weaver of Society and says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Drink now from the Cup of the Common Treasury, whose draughts bring not intoxication, but the Irreducible Minimum of life, peace, and sustenance.</em></p>
+</HisyeoTabs>
+
+The Weaver of Society sips, then the Weaver of Labor. The tools to be sanctified
+are taken from the Workbench and moved widdershins (counter-cosmic, to unwind
+the old programming) to the West quarter, immersing them in water. The Weaver of
+Labor says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Spirits of the West, waters of the Flowing Domain, In cool waters cleanse these tools of Extraction.</em></p>
+    <p>&emsp;<em>Wash from them the stain of Profit and the echo of Commodity.</em></p>
+    <p>&emsp;<em>This I ask, this charge I lay, By the root, the weave, and the open hand.</em></p>
+</HisyeoTabs>
+
+The objects are moved to the South quarter and passed above the flames. The
+Weaver of Society says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Spirits of the South, fires of Transformation, In shining flames purify these tools of Greed.</em></p>
+    <p>&emsp;<em>Burn from them the Sin of Domination and the desire to Hoard.</em></p>
+    <p>&emsp;<em>This I ask, this charge I lay, By the root, the weave, and the open hand.</em></p>
+</HisyeoTabs>
+
+The objects are moved to the East quarter and passed through the incense smoke.
+The Weaver of Labor says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Spirits of the East, winds of Inquiry, In swirling winds polish these tools of Dogma.</em></p>
+    <p>&emsp;<em>Sweep from them the Phantasms of Advertising and the illusions of the Market.</em></p>
+    <p>&emsp;<em>This I ask, this charge I lay, By the root, the weave, and the open hand.</em></p>
+</HisyeoTabs>
+
+The objects are moved to the Workbench (Altar) and placed upon the symbol of the
+Weave. The Weaver of Society says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Spirits of the North, earth of Material Reality, In the soil of Dimîtu ground these tools.</em></p>
+    <p>&emsp;<em>Take from them the spirits of Alienation.</em></p>
+    <p>&emsp;<em>This I ask, this charge I lay, By the root, the weave, and the open hand.</em></p>
+</HisyeoTabs>
+
+The Consecrator now offers the charge to the items, stating their use for the
+Social Product and the Good of the Communion. The Weaver of Society says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Spirits of the East, from the breath of speech come, Fill these tools with the energy of Radical Truth.</em></p>
+    <p>&emsp;<em>Make them light as the Idea. Spirits of air, hearken unto me, As I Consensus, so shall it be constructed.</em></p>
+</HisyeoTabs>
+
+The tools are moved to the South. The Weave of Labor says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Spirits of the South, from the kiln of industry come, Fill these tools with the energy of Sacred Labor.</em></p>
+    <p>&emsp;<em>Make them glow with the Visible Hand. Spirits of fire, hearken unto me, As I Consensus, so shall it be constructed.</em></p>
+</HisyeoTabs>
+
+The tools are moved to the West. The Weaver of Labor says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Spirits of the West, from the waters of life come, Fill these tools with the energy of Universal Provision.</em></p>
+    <p>&emsp;<em>Make them flow like the Common Treasury. Spirits of water, hearken unto me, As I Consensus, so shall it be constructed.</em></p>
+</HisyeoTabs>
+
+The tools are moved to the Workbench. The Weave of Society says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Spirits of the North, from the foundation come, Fill these tools with the energy of Ecological Restoration.</em></p>
+    <p>&emsp;<em>Make them flourish like the Regenerated Earth. Spirits of earth, hearken unto me, As I Consensus, so shall it be constructed.</em></p>
+</HisyeoTabs>
+
+The Weaver of Labor takes the tools. The Weaver of Society stands facing them.
+The Weaver of Labor extends their arm with the tools and says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>I am the Producer, ever creating. I am the stag in the woods, I am the sun in the noonday sky, I am the worker at the forge.</em></p>
+    <p>&emsp;<em>I offer Agency, Strength, Dedication, and the swiftness of Innovation.</em></p>
+</HisyeoTabs>
+
+The Weaver of Society extends their arm and places their hand over that of the
+Weaver of Society and says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>I am the Sustainer, ever weaving. I am the beauty of the New Idea, I am the quiet strength of the Community, I am the infinite wisdom of the Collective Memory.</em></p>
+    <p>&emsp;<em>I offer Life, Solidarity, Warmth, and the abundance of the Harvest.</em></p>
+</HisyeoTabs>
+
+Both step towards each other, cupping the tools together. They clasp each
+other's arms and say:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Agency and Communion, Self and Society, Spark and Weave. Apart we are Shards, forever incomplete, but together we form the Whole.</em></p>
+    <p>&emsp;<em>In our joining, the First Law is shattered. In our union, the limitless energy of the Cosmic Soul is released and captured here.</em></p>
+</HisyeoTabs>
+
+Then the Weaver of Labor says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>As I Will.</em></p>
+</HisyeoTabs>
+
+Then the Weaver of Society says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>As I Will.</em></p>
+</HisyeoTabs>
+
+Then they both say:
+
+<HisyeoTabs>
+    <p>&emsp;<em>As We Consensus, so shall it be constructed. (Ni kûu li gô lôîcôk) .</em></p>
+</HisyeoTabs>
+
+The Weavers embrace. The tools are replaced on the Workbench. Food and drink
+from the Common Provisions are shared, acknowledging that they are rights of
+membership, not commodities. The session dissolves into a period of celebration
+and relaxation.
+
+### The Renewal of the Weave
+A gathering of the Hîsyêô Apostolic Communion in a forest clearing to celebrate
+the Sacraments of Forest Bathing (Dimîtu) and Labor (Îfêstôs).
+
+##### Personnel Required:
+- **Facilitator** (<HisyeoWord is='ônî'/> <HisyeoWord is='hobîyô'/>): The narrator who guides the ritual.
+- **The Weavers**: Two members representing the Archetypes of Liberation  (specifically Dimîtu for Nature and Îfêstôs for Labor), dressed in simple, functional garments.
+- **Musicians**: Drummers to represent the heartbeat of the Cosmic Soul.
+
+##### Tools/Supplies:
+- A central <HisyeoWord is='môtô'/> (The Spark of Unonsî).
+- A <HisyeoWord is='xolu'/> (Cup/Bowl) of <HisyeoWord is='îskô'/> (Wine/Drink).
+- Dried <HisyeoWord is='hôncôû'/> (Herb) or a flammable alcohol.
+
+---
+
+**Facilitator:**
+<HisyeoTabs>
+    <p>&emsp;<em>Greetings, Free Dwellers. This time of year means many things. It is the time when the earth wakes up, when the winter cold fades, and life (zîwit)  returns. But for us, in this Communion , it means we leave the stone boxes of our buildings and return to the Sanctuary of Dimîtu (Nature).</em></p>
+    <p>&emsp;<em>We often talk about the Great Weave , but too often we live inside the Shards. We live in concrete cages built by the Idolatry of Accumulation. Inside those walls, the world is broken. The air is thick with the poison of factories. The people are tired because their time is stolen for profit. But here, we return to the truth.</em></p>
+    <p>&emsp;<em>We stand in a small piece of forest, inside a city. But now, I ask you to forget the city. Close your eyes. Let the city fade away. Forget the markets of greed where food is locked behind glass while people starve. Forget the banks that fund wars to kill children for oil. These are the Echoes of the First Law.</em></p>
+    <p>&emsp;<em>Instead, see the forest growing. See the roots breaking the concrete. See the Weave repairing the world. Once, this land was free. The rivers ran clean, not filled with the waste of industry. One day, if we work hard, it will be free again.</em></p>
+    <p>&emsp;<em>Picture the forest—the body of Dimîtu —holding us. We are the people of the Weave.</em></p>
+    <p>&emsp;<em>Here in the wild, we do not need a sword to make a sacred space. A sword is a tool of the Sin of Domination. We reject coercion. We have each other. We have our hands (zûngô). Join hands now. Breathe together. Feel the Consensus (Tîengûun)  flow from hand to hand. We are building a wall of light against the Shards.</em></p>
+    <p>&emsp;<em>Here in the wild, we do not need a broom to clean our space. The wilderness is already pure. It washes away the filth of the Capitalist Shards. Feel your fear and your worry leave you. The forest takes your pain and turns it into life.</em></p>
+    <p>&emsp;<em>Here in the wild, we do not need incense. We have the wind (woyû). It is the breath of Suluswutî (The Questioner), clearing our minds of dogma. Breathe deep. Greet the spirits of the air in silence.</em></p>
+    <p>&emsp;<em>Here in the wild, we do not need a candle. We have the great fire in the center, the fire of Îfêstôs (The Worker). See the flames? That is the energy of creation, not destruction. It is the warmth of our labor. Feel the heat. Greet the spirits of fire in silence.</em></p>
+    <p>&emsp;<em>Here in the wild, we do not need a bowl of water. We have the rain and the dew. This is the water of Bostet (Empathy). It flows to everyone, ensuring no one is thirsty. Feel the damp air. Greet the spirits of water in silence.</em></p>
+    <p>&emsp;<em>Here in the wild, we do not need salt. We have the earth itself (bûmî). It is the solid ground of our Common Treasury. It belongs to no one, so it belongs to everyone. Feel the earth under you. Greet the spirits of earth in silence.</em></p>
+    <p>&emsp;<em>Open yourself to the pulse of life. Feel the seeds (oûdî)  pushing up from the dirt. Feel the joy of the green leaves. The earth is warm. The rain is life. All of nature is dancing.</em></p>
+    <p>&emsp;<em>And feel the presence of the Liberators! The Archetypes are near. Dimîtu (Nature) and Îfêstôs (Labor) are the soul of this place. They are the beauty of the green earth and the power of the stars. Feel them coming closer. They are drawn by our Solidarity. They are here!"</em></p>
+</HisyeoTabs>
+
+The Facilitator throws the herbs into the fire. As it flares, the drummers begin the rhythm of the Weave. The representatives of Dimîtu and Îfêstôs enter the circle and begin the Cifulo (Dance). They pull members into the dance until the entire Communion is moving as one.
+
+As the dance peaks, the representatives hold up the Xolu (Cup).
+
+**Facilitator:**
+<HisyeoTabs>
+    <p>&emsp;<em>Down!</em></p>
+</HisyeoTabs>
+
+The Communion falls to the earth, touching the soil.
+
+**Facilitator:**
+<HisyeoTabs>
+    <p>&emsp;<em>Feel the energy rising. It is a cone of fire. See it explode like fireworks, sending power back to the earth. This power will heal the Shards. It will give strength to the workers. It will bring green to the wasteland. Now rise, and join hands again.</em></p>
+</HisyeoTabs>
+
+
+The Cup is passed. Each person is kissed or embraced—a sign of Bostet (Empathy). They sing:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Powers of the Earth, Powers taking form, Rising to rebirth, Rising to be born.</em></p>
+</HisyeoTabs>
+
+The final portion is poured into the fire as a gift to the Common Treasury of Nature.
+
+**Facilitator:**
+<HisyeoTabs>
+    <p>&emsp;<em>We do not say goodbye to the Archetypes. Dimîtu (Nature), Îfêstôs (Labor), and Tîengûun (Community) are always with us. They are in the work we do every day. We only take our leave for a moment. Go now, free from the Shards.</em></p>
+    <p>&emsp;<em>LET THE KÔNDODÛ (CELEBRATION) BEGIN!</em></p>
+</HisyeoTabs>
+
+### The Kindle of the Weave (Imbolc)
+The Gathering Space is in darkness, representing the Void of the First Law and
+the alienation of the capitalist world outside. In the center lies the Fire of
+Îfêstôs (Labor), currently a low ember. The altar holds symbols of the
+Archetypes. The "Circle" is the Council of Consensus.
+
+**Participants:**
+
+*The Weaver* - Represents the voice of the Community (Tîengûun).
+
+*The Steward* - Represents the care of the Earth (Dimîtu) and the Body (Bostet).
+
+---
+
+The Weaver stands in the darkness:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Awake, O Collective Spirit, from your slumber!</em></p>
+    <p>&emsp;<em>Awake, O Cosmic Soul, and restore the Weave!</em></p>
+    <p>&emsp;<em>Comrades—we are in the darkness.</em></p>
+    <p>&emsp;<em>Outside these walls, the Shards of Greed tear at the flesh of the world.</em></p>
+    <p>&emsp;<em>The horrors of hunger and war, born of the Idol of Money, press against our doors.</em></p>
+</HisyeoTabs>
+
+The Steward picks up a jug of water and pours it into a communal bowl, saying:
+
+<HisyeoTabs>
+    <p>&emsp;<em>The stagnation is broken.</em></p>
+    <p>&emsp;<em>The ice of isolation melts towards the Season of Light.</em></p>
+    <p>&emsp;<em>Blood and oil have stained the tracks of the old world, but here, the ways are clear of death.</em></p>
+    <p>&emsp;<em>Old and weary I was, ground down by the machine of profit, but here in the mystery of the water, I am renewed.</em></p>
+    <p>&emsp;<em>For I am the Solidarity you sought but could not find in the market.</em></p>
+    <p>&emsp;<em>For I was singing to the future generations unseen, beneath the concrete and the factories.</em></p>
+</HisyeoTabs>
+
+The Steward takes the asperge (branch) and walks the circle. They asperge each
+person, chanting the Litany of Connection (replaces Witches Rune). On the last
+round, they hand each person a white candle.
+
+When everyone has a candle, the circling stops. The Steward lights the main altar candles and says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>The winter of the Shards is passing; the Great Weave awakens once more from its sleep.</em></p>
+    <p>&emsp;<em>The Spirit of Liberation walks among us again and brings the blessings of the Common Treasury upon the land and upon our lives.</em></p>
+</HisyeoTabs>
+
+The Weaver and Steward step forward and remove the cover from the central icon (representing the Archetypes). Everyone shouts:
+
+<HisyeoTabs>
+    <p>&emsp;<em>The Weave is Whole! Solidarity is Welcome!</em></p>
+</HisyeoTabs>
+
+The Steward takes a light from the Central Fire (Yule log) and says:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Let the inner light of consciousness bear fruit in our own lives, even as the Earth bears the first flowers of Dimîtu (Nature). </em></p>
+    <p>&emsp;<em>I speak for the Triple Flame, the Archetypes of our Salvation: I bring three gifts of fire to burn away the rot of capitalism.</em></p>
+    <p>&emsp;<em>The first is the Flame of Îfêstôs (Labor); the fire of the maker and the artist; the passion of the worker to create for use, not for profit.</em></p>
+    <p>&emsp;<em>The second is the Flame of Suluswutî (Inquiry); the fire of purification and testing, the flame of truth.</em></p>
+    <p>&emsp;<em>With this flame, all lies of the hierarchy and the weakness of submission are made clear and cleansed from you, so you become like a true and tested tool of liberation.</em></p>
+    <p>&emsp;<em>The third is the greatest of all, for it is the Flame of Bostet (Empathy); the healing flame born out of the solidarity that shares all, the maker of peace and harmony.</em></p>
+</HisyeoTabs>
+
+Everyone then lights their candle from the Central Fire and starts to circle deosil (sunwise), lighting the candles around the room as they go, chanting:
+
+<HisyeoTabs>
+    <p>&emsp;<em>Thus we banish Greed, thus we welcome Care; Say farewell to what is dead, and greet the life we share.</em></p>
+</HisyeoTabs>
+
+When all the candles are lit, everyone places their candle in a sand pot, and the chanting ceases.
+
+The Steward and Weaver bless the Common Provisions (bread and drink).
+
+<HisyeoTabs>
+    <p>&emsp;<em>By the labor of our hands, we eat. By the bond of our spirits, we live. This is the body of the Weave.</em></p>
+</HisyeoTabs>
+
 
 ## Festivals
 
